--- a/vue_shop/src/assets/css/global.css
+++ b/vue_shop/src/assets/css/global.css
@@ -4,6 +4,7 @@ body,
     height: 100%;
     padding: 0;
     margin: 0;
+    min-width: 1366px;
 }
 
 .el-breadcrumb{
@@ -24,6 +25,7 @@ body,
     margin-top: 15px;
 }
 
-.el-popconfirm{
-    float: left;
+.vcenter{
+    display: flex;
+    align-items: center;
 }
